--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,8 @@
+<h1>All Posts</h1>
+
 <ul>
   <% @posts.each do |p| %>
     <li><%= p.title %> - <%= p.description %></li>
   <% end %>
-</ul>
+</ul></h1>
+
